--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -16,7 +16,7 @@
 title: SIMLAR
 email: marcus.bendtsen@gmail.com
 description: Simulator Living Systematic Review
-baseurl: /docs
+baseurl: /docs/
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: marcusbendtsen
 github_username:  marcus.bendtsen
